[package]
name = "drawer"
version = "0.1.0"
authors = ["Anton Shramko <antonshramko@yandex.ru>"]

[dependencies]
yoga = { git = "https://github.com/rise-ui/yoga-rs", branch = "enum-case", features = ["serde_support"] }
dom = { git = "https://github.com/rise-ui/dom-lite", branch = "master" }
hashbrown = { version = "0.1.8", features = ["serde"] }
jss = { git = "https://github.com/rise-ui/jss-rs" }
enum_extract = "0.1.1"
num-traits = "0.2.6"
euclid = "0.19.5"
rand = "0.6.4"

# dom = { version = "0.1", path = "../dom-lite" }
# jss = { path = "../jss-rs" }

[dev-dependencies]
ordered-float = "1.0.1"
lazy_static = "1.2.0"
env_logger = "0.6.0"
app_units = "0.7.1"
mozangle = "0.1.7"
euclid = "0.19.5"
gleam = "0.6.8"
glutin = "0.19.0"
winit = "0.18.1"
rayon = "1.0.3"
